apps/services/backend/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
    - name: s3-api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
